--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <link href="style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title></title>
     <meta name="description" content="">
