--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="style.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <title></title>
+    <title> Titre </title>
     <meta name="description" content="">
   </head>
 <body>
