mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title></title>
-    <meta name="description" content="">
+    <meta name="description" content="Nougbode Naomi.Etudiante en 2ème année de licenseen IRT à Esgis.">
   </head>
 <body>
 </body>
