--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <meta name="description" content="">
   </head>
 <body>
+    <h1>Compétences</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis dolorem cupiditate odit et, possimus tenetur quod velit repellat esse. Corrupti fuga commodi qui illo voluptatum perferendis repellendus exercitationem enim dicta.</p>
 </body>
 </html>
